# image-processing

./: .gitignore  CMakeLists.txt  includes.h  stitch.cpp
image-stitching/: CMakeLists.txt  includes.h  parameters.txt  stitch.cpp
sfm/: parameters.txt  scene_reconstruction.cpp
